--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "vercel-build": "pwd && ls && ls app && next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
